--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,8 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	implementation group: 'com.auth0', name: 'java-jwt', version: '4.3.0'
+	implementation group: 'org.mindrot', name: 'jbcrypt', version: '0.4'
 }
 
 tasks.named('test') {
